# sorosplits

./: README.md
backend/: Dockerfile  README.md  bun.lockb  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
contracts/: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  soroswap_router.optimized.wasm  token_contract.wasm
contracts/contracts/deployer/: Cargo.toml
contracts/contracts/deployer/src/: lib.rs  splitter_tests.rs  tests.rs
contracts/contracts/diversifier/: Cargo.toml
contracts/contracts/diversifier/src/: contract.rs  errors.rs  lib.rs
contracts/contracts/diversifier/src/storage/: config.rs  mod.rs  swaps.rs
contracts/contracts/splitter/: Cargo.toml
contracts/contracts/splitter/src/: contract.rs  errors.rs  lib.rs  storage.rs  tests.rs
contracts/contracts/splitter/src/logic/: helpers.rs
contracts/contracts/splitter/src/logic/execute/: distribute_tokens.rs  init.rs  lock_contract.rs  mod.rs  transfer_tokens.rs  update_name.rs  update_shares.rs  update_whitelisted_tokens.rs  withdraw_allocation.rs  withdraw_external_allocation.rs
contracts/contracts/splitter/src/logic/query/: get_allocation.rs  get_config.rs  get_share.rs  get_unused_tokens.rs  list_shares.rs  list_whitelisted_tokens.rs  mod.rs
contracts/contracts/splitter/src/storage/: config.rs  distributions.rs  mod.rs  recipients.rs
contracts/contracts/splitter/src/tests/: distribute.rs  distribute_tokens.rs  helpers.rs  init.rs  lock_contract.rs  transfer_tokens.rs  update_name.rs  update_shares.rs  update_whitelisted_tokens.rs  withdraw_allocation.rs  withdraw_external_allocation.rs
contracts/scripts/: .gitignore  convertWasmHashToByteArray.js  deploy.sh  run.sh
contracts/wasm_external/: soroban_token_contract.wasm
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/docs/: intro.md
frontend/: .gitignore  README.md  bun.lockb  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Button.tsx  Footer.tsx  Input.tsx  Layout.tsx  Loading.tsx  Modal.tsx  Navbar.tsx  NewLayout.tsx  PageHeader.tsx  Sidebar.tsx  SplitterData.tsx  Switch.tsx  Text.tsx  TokenDistribution.tsx  Wallet.tsx
frontend/contracts/: Base.ts  Splitter.ts  Token.ts
frontend/hooks/: useApi.tsx  useContracts.tsx  useModal.tsx  (+3 more)
sdk/: .gitignore  README.md  bun.lockb  config.ts  index.ts  package.json  tsconfig.json
(+111 files in other folders)
