[package]
name = "sorosplits-deployer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
sorosplits-utils = { path = "../../packages/utils" }

[dev_dependencies]
soroban-sdk = { version = "20.3.4", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
