[package]
name = "sorosplits-diversifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.3.1"
sorosplits-utils = { path = "../../packages/utils" }

[dev_dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
