[package]
name = "sorosplits-splitter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.2.0"
soroban-fixed-point-math = "1.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.2.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
