[package]
name = "sorosplits-splitter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = "1.0.0"
sorosplits-utils = { path = "../../packages/utils" }

[dev_dependencies]
soroban-sdk = { version = "20.3.4", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
